--- a/.github/workflows/apk-build-release.yaml
+++ b/.github/workflows/apk-build-release.yaml
@@ -31,5 +31,5 @@ jobs:
       - name: Clean and Build Flutter Apk
         run: |
           flutter clean
-          flutter build apk --release
+          flutter build apk --no-codesign --release
 
