add signing apk

--- a/.github/workflows/apk-build-release.yaml
+++ b/.github/workflows/apk-build-release.yaml
@@ -27,9 +27,24 @@ jobs:
 
       - name: Upgrade Dependencies
         run: flutter pub upgrade
-
+      
       - name: Clean and Build Flutter Apk
         run: |
           flutter clean
-          flutter build apk --release
+          flutter build apk
 
+      - uses: r0adkll/sign-android-release@v1
+        name: Sign app APK
+        # ID used to access action output
+        id: sign_app
+        with:
+          releaseDirectory: app/build/outputs/apk/release
+          signingKeyBase64: ${{ secrets.SIGNING_KEY }}
+          alias: ${{ secrets.ALIAS }}
+          keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.KEY_PASSWORD }}
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: Signed app bundle
+          path: ${{steps.sign_app.outputs.signedReleaseFile}}
